--- a/package.json
+++ b/package.json
@@ -16,19 +16,24 @@
     "babel-polyfill": "^6.26.0",
     "body-parser": "^1.18.2",
     "express": "^4.16.2",
+    "history": "^4.7.2",
     "lodash": "^4.17.4",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-redux": "^5.0.6",
+    "react-router-redux": "^5.0.0-alpha.9",
     "redux": "^3.7.2",
     "redux-saga": "^0.16.0",
     "superagent": "^3.8.2"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0-beta.36",
+    "@babel/plugin-syntax-object-rest-spread": "^7.0.0-beta.37",
     "@babel/preset-env": "^7.0.0-beta.36",
     "@babel/preset-react": "^7.0.0-beta.36",
     "babel-cli": "^6.26.0",
     "babel-loader": "^8.0.0-beta.0",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "file-loader": "^1.1.6",
     "html-loader": "^0.5.4",
     "html-webpack-plugin": "^2.30.1",
@@ -41,6 +46,9 @@
     "presets": [
       "@babel/preset-env",
       "@babel/preset-react"
+    ],
+    "plugins": [
+      "@babel/plugin-syntax-object-rest-spread"
     ]
   }
 }
