--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "lib/index.js",
   "scripts": {
     "build": "webpack --config webpack.config.js",
-    "start": "webpack-dev-server"
+    "dev-start": "webpack-dev-server",
+    "start": "node index.js",
+    "heroku-postbuild": "npm run build"
   },
   "repository": {
     "type": "git",
