--- a/package.json
+++ b/package.json
@@ -18,124 +18,43 @@
   },
   "author": "Ray Proud <stillerr@ya.ru>",
   "dependencies": {
-    "babel-polyfill": "^6.26.0",
-    "body-parser": "^1.18.2",
-    "express": "^4.16.2",
-    "history": "^4.7.2",
-    "lodash": "^4.17.4",
-    "react": "^16.2.0",
-    "react-dom": "^16.2.0",
-    "react-redux": "^5.0.6",
-    "react-router": "^4.2.0",
-    "react-router-redux": "^5.0.0-alpha.9",
-    "redux": "^3.7.2",
-    "redux-saga": "^0.16.0",
-    "superagent": "^3.8.2"
+    "babel-polyfill": "6.26.0",
+    "express": "4.16.2",
+    "lodash": "4.17.4",
+    "react": "16.2.0",
+    "react-dom": "16.2.0",
+    "react-redux": "5.0.6",
+    "react-router": "4.2.0",
+    "react-router-redux": "5.0.0-alpha.9",
+    "redux": "3.7.2",
+    "redux-saga": "0.16.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.0.0-beta.38",
-    "@babel/plugin-proposal-class-properties": "^7.0.0-beta.38",
-    "@babel/plugin-syntax-object-rest-spread": "^7.0.0-beta.38",
-    "@babel/preset-env": "^7.0.0-beta.38",
-    "@babel/preset-react": "^7.0.0-beta.38",
-    "babel-cli": "^6.26.0",
-    "babel-eslint": "7.1.1",
-    "babel-loader": "^8.0.0-beta.0",
-    "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "eslint": "^4.16.0",
+    "@babel/core": "7.0.0-beta.38",
+    "@babel/plugin-proposal-class-properties": "7.0.0-beta.38",
+    "@babel/plugin-syntax-object-rest-spread": "7.0.0-beta.38",
+    "@babel/preset-env": "7.0.0-beta.38",
+    "@babel/preset-react": "7.0.0-beta.38",
+    "babel-cli": "6.26.0",
+    "babel-eslint": "8.1.0",
+    "babel-loader": "8.0.0-beta.0",
+    "babel-plugin-transform-object-rest-spread": "6.26.0",
+    "eslint": "4.16.0",
     "eslint-config-airbnb": "13.0.0",
     "eslint-config-airbnb-base": "10.0.1",
     "eslint-import-resolver-webpack": "0.8.0",
+    "eslint-plugin-babel": "4.1.2",
     "eslint-plugin-import": "2.2.0",
     "eslint-plugin-jsx-a11y": "2.2.3",
-    "eslint-plugin-react": "^6.7.1",
-    "eslint-plugin-redux-saga": "^0.1.5",
-    "file-loader": "^1.1.6",
-    "html-loader": "^0.5.5",
-    "html-webpack-plugin": "^2.30.1",
-    "tap-spec": "^4.1.1",
-    "tape": "^4.8.0",
-    "webpack": "^3.10.0",
-    "webpack-dev-server": "^2.11.1"
-  },
-  "eslintConfig": {
-    "parser": "babel-eslint",
-    "extends": "airbnb",
-    "env": {
-      "browser": true,
-      "node": true,
-      "jest": true,
-      "es6": true
-    },
-    "plugins": [
-      "redux-saga",
-      "react",
-      "jsx-a11y"
-    ],
-    "parserOptions": {
-      "ecmaVersion": 6,
-      "sourceType": "module",
-      "ecmaFeatures": {
-        "jsx": true
-      }
-    },
-    "rules": {
-      "arrow-parens": [
-        "error",
-        "always"
-      ],
-      "arrow-body-style": [
-        2,
-        "as-needed"
-      ],
-      "comma-dangle": [
-        2,
-        "never"
-      ],
-      "import/imports-first": 0,
-      "import/newline-after-import": 0,
-      "import/no-dynamic-require": 0,
-      "import/no-extraneous-dependencies": 0,
-      "import/no-named-as-default": 0,
-      "import/no-unresolved": 2,
-      "import/prefer-default-export": 0,
-      "indent": [
-        2,
-        4,
-        {
-          "SwitchCase": 1
-        }
-      ],
-      "jsx-a11y/aria-props": 2,
-      "jsx-a11y/heading-has-content": 0,
-      "jsx-a11y/href-no-hash": 2,
-      "jsx-a11y/label-has-for": 2,
-      "jsx-a11y/mouse-events-have-key-events": 2,
-      "jsx-a11y/role-has-required-aria-props": 2,
-      "jsx-a11y/role-supports-aria-props": 2,
-      "max-len": 0,
-      "newline-per-chained-call": 0,
-      "no-confusing-arrow": 0,
-      "no-console": 1,
-      "no-use-before-define": 0,
-      "prefer-template": 2,
-      "class-methods-use-this": 0,
-      "react/forbid-prop-types": 0,
-      "react/jsx-first-prop-new-line": [
-        2,
-        "multiline"
-      ],
-      "react/jsx-filename-extension": 0,
-      "react/jsx-no-target-blank": 0,
-      "react/jsx-curly-spacing": 0,
-      "react/prefer-stateless-function": 0,
-      "react/require-extension": 0,
-      "react/self-closing-comp": 0,
-      "redux-saga/no-yield-in-race": 2,
-      "redux-saga/yield-effects": 2,
-      "require-yield": 0,
-      "import/no-webpack-loader-syntax": 0
-    }
+    "eslint-plugin-react": "6.7.1",
+    "eslint-plugin-redux-saga": "0.1.5",
+    "file-loader": "1.1.6",
+    "html-loader": "0.5.5",
+    "html-webpack-plugin": "2.30.1",
+    "tap-spec": "4.1.1",
+    "tape": "4.8.0",
+    "webpack": "3.10.0",
+    "webpack-dev-server": "2.11.1"
   },
   "babel": {
     "presets": [
