--- a/package.json
+++ b/package.json
@@ -7,10 +7,16 @@
     "build": "webpack --config webpack.config.js",
     "dev-start": "webpack-dev-server",
     "start": "node index.js",
-    "heroku-postbuild": "npm run build"
+    "lint": "eslint --ext=jsx --ext=js --ignore-path .gitignore -- . ",
+    "heroku-postbuild": "npm run build",
+    "precommit": "lint-staged"
+  },
+  "lint-staged": {
+    "*.{js,jsx}": "lint"
   },
   "engines": {
-    "node": "8.9.1"
+    "node": "8.9.1",
+    "npm": "5.0.0"
   },
   "repository": {
     "type": "git",
@@ -51,6 +57,8 @@
     "file-loader": "1.1.6",
     "html-loader": "0.5.5",
     "html-webpack-plugin": "2.30.1",
+    "husky": "0.14.3",
+    "lint-staged": "6.1.1",
     "tap-spec": "4.1.1",
     "tape": "4.8.0",
     "webpack": "3.10.0",
