--- a/package.json
+++ b/package.json
@@ -4,11 +4,10 @@
   "description": "An app for training your ears",
   "main": "lib/index.js",
   "scripts": {
-    "build": "webpack --config webpack.config.js",
+    "build": "cross-env NODE_ENV=production webpack --config webpack.config.js --color -p --progress --hide-modules --display-optimization-bailout",
     "dev-start": "webpack-dev-server",
     "start": "node index.js",
     "lint": "eslint --ext=jsx --ext=js --ignore-path .gitignore -- . ",
-    "heroku-postbuild": "npm run build",
     "precommit": "lint-staged"
   },
   "lint-staged": {
@@ -25,6 +24,7 @@
   "author": "Ray Proud <stillerr@ya.ru>",
   "dependencies": {
     "babel-polyfill": "6.26.0",
+    "cross-env": "^5.1.3",
     "express": "4.16.2",
     "lodash": "4.17.4",
     "react": "16.2.0",
@@ -38,13 +38,13 @@
   "devDependencies": {
     "@babel/core": "7.0.0-beta.38",
     "@babel/plugin-proposal-class-properties": "7.0.0-beta.38",
+    "@babel/plugin-proposal-object-rest-spread": "7.0.0-beta.40",
     "@babel/plugin-syntax-object-rest-spread": "7.0.0-beta.38",
     "@babel/preset-env": "7.0.0-beta.38",
     "@babel/preset-react": "7.0.0-beta.38",
     "babel-cli": "6.26.0",
     "babel-eslint": "8.1.0",
     "babel-loader": "8.0.0-beta.0",
-    "babel-plugin-transform-object-rest-spread": "6.26.0",
     "eslint": "4.16.0",
     "eslint-config-airbnb": "13.0.0",
     "eslint-config-airbnb-base": "10.0.1",
@@ -71,7 +71,8 @@
     ],
     "plugins": [
       "@babel/plugin-syntax-object-rest-spread",
-      "@babel/plugin-proposal-class-properties"
+      "@babel/plugin-proposal-class-properties",
+      "@babel/plugin-proposal-object-rest-spread"
     ]
   }
 }
