--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "lib/index.js",
   "scripts": {
     "build": "cross-env NODE_ENV=production webpack --config webpack.config.js --color -p --progress --hide-modules --display-optimization-bailout",
-    "dev-start": "webpack-dev-server",
+    "start:dev": "webpack-dev-server",
     "start": "node index.js",
     "lint": "eslint --ext=jsx --ext=js --ignore-path .gitignore -- . ",
     "precommit": "lint-staged"
@@ -24,11 +24,11 @@
   "author": "Ray Proud <stillerr@ya.ru>",
   "dependencies": {
     "babel-polyfill": "6.26.0",
-    "cross-env": "^5.1.3",
+    "cross-env": "5.1.3",
     "express": "4.16.2",
     "lodash": "4.17.4",
-    "react": "16.2.0",
-    "react-dom": "16.2.0",
+    "react": "16.8.6",
+    "react-dom": "16.8.6",
     "react-redux": "5.0.6",
     "react-router": "4.2.0",
     "react-router-redux": "5.0.0-alpha.9",
@@ -36,33 +36,34 @@
     "redux-saga": "0.16.0"
   },
   "devDependencies": {
-    "@babel/core": "7.0.0-beta.38",
-    "@babel/plugin-proposal-class-properties": "7.0.0-beta.38",
-    "@babel/plugin-proposal-object-rest-spread": "7.0.0-beta.40",
-    "@babel/plugin-syntax-object-rest-spread": "7.0.0-beta.38",
-    "@babel/preset-env": "7.0.0-beta.38",
-    "@babel/preset-react": "7.0.0-beta.38",
-    "babel-cli": "6.26.0",
-    "babel-eslint": "8.1.0",
+    "@babel/core": "7.0.0",
+    "@babel/plugin-proposal-class-properties": "7.0.0",
+    "@babel/plugin-proposal-object-rest-spread": "7.0.0",
+    "@babel/plugin-syntax-object-rest-spread": "7.0.0",
+    "@babel/preset-env": "7.0.0",
+    "@babel/preset-react": "7.0.0",
+    "babel-cli": "^6.0.0",
+    "babel-eslint": "8.2.2",
     "babel-loader": "8.0.0-beta.0",
-    "eslint": "4.16.0",
+    "eslint": "4.19.1",
     "eslint-config-airbnb": "13.0.0",
     "eslint-config-airbnb-base": "10.0.1",
     "eslint-import-resolver-webpack": "0.8.0",
     "eslint-plugin-babel": "4.1.2",
     "eslint-plugin-import": "2.2.0",
     "eslint-plugin-jsx-a11y": "2.2.3",
-    "eslint-plugin-react": "6.7.1",
+    "eslint-plugin-react": "7.12.4",
     "eslint-plugin-redux-saga": "0.1.5",
     "file-loader": "1.1.6",
     "html-loader": "0.5.5",
-    "html-webpack-plugin": "2.30.1",
+    "html-webpack-plugin": "3.2.0",
     "husky": "0.14.3",
     "lint-staged": "6.1.1",
     "tap-spec": "4.1.1",
     "tape": "4.8.0",
-    "webpack": "3.10.0",
-    "webpack-dev-server": "2.11.1"
+    "webpack": "4.30.0",
+    "webpack-cli": "3.3.0",
+    "webpack-dev-server": "3.3.1"
   },
   "babel": {
     "presets": [
